# tcp-sendfile

./: ARCHITECTURE.md  Cargo.toml  README.md
src/: cli.rs  connection.rs  file.rs  hash.rs  lib.rs  main.rs  send.rs  transport.rs
src/file/: error.rs  mod.rs  send.rs  utils.rs
src/stream/: error.rs  mod.rs  receive.rs  receive_tests.rs  send.rs  send_tests.rs  utils.rs
