[package]
name = "sendfile"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.58", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
aquamarine = "0.6"
thiserror = "2.0.18"
env_logger = "0.11.9"
log = "0.4.29"
postcard = { version = "1.1.3", features = ["alloc"] }

[dev-dependencies]
